--- a/src/styles/partials/_navbar.scss
+++ b/src/styles/partials/_navbar.scss
@@ -87,6 +87,11 @@
     }
   }
 
+  a.no-dropdown {
+    @include variables.md {
+      width: 60px;
+    }
+  }
   a.nav-link:hover {
     color: black;
     text-decoration: underline;
@@ -100,7 +105,7 @@
   }
 
   .nav-item.dropdown {
-    width: 80px;
+    width: 100px;
   }
 
   .navbar-brand {
